--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -44,13 +44,14 @@
             <a
               class="block rounded-md bg-teal-600 px-5 py-2.5 text-sm font-medium text-white transition hover:bg-teal-700"
               href="#"
+              routerLink="login"
             >
               Login
             </a>
   
             <a
               class="hidden rounded-md bg-gray-100 px-5 py-2.5 text-sm font-medium text-teal-600 transition hover:text-teal-600/75 sm:block"
-              href="#"
+              routerLink="register"
             >
               Register
             </a>
