--- a/src/app/pages/footers/footers.component.html
+++ b/src/app/pages/footers/footers.component.html
@@ -1,9 +1,3 @@
-<!--
-  Heads up! 👋
-
-  Plugins:
-    - @tailwindcss/forms
--->
 
 <footer class="bg-white">
     <div class="mx-auto max-w-screen-xl px-4 pb-8 pt-16 sm:px-6 lg:px-8">
@@ -18,7 +12,7 @@
               class="w-full rounded-full border-gray-200 bg-gray-100 p-4 pe-32 text-sm font-medium"
               id="email"
               type="email"
-              placeholder="minthao@gmail.com"
+              placeholder=""
             />
   
             <button
